src/objects/Hold__c.object
<CustomObject>
    <fields>
        <fullName>CallUpDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Call Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Holds</relationshipLabel>
        <relationshipName>Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HoldType__c</fullName>
        <label>Hold Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>G-28</fullName>
                </value>
                <value>
                    <fullName>Awaiting Related File</fullName>
                </value>
                <value>
                    <fullName>Awaiting AOR Contact</fullName>
                </value>
                <value>
                    <fullName>External File Request</fullName>
                </value>
                <value>
                    <fullName>FOIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>Hold</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Edit_Hold</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Permission.Custom_Perm_Super_User ), 
 NOT(ISNEW()), 
OR(
 ISCHANGED( HoldType__c	),
 ISCHANGED( CallUpDate__c )
)
)</errorConditionFormula>
        <errorMessage>please do not edit</errorMessage>
    </validationRules>
</CustomObject>